<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name    "AELF - Lectures du jour">
    <!ENTITY app_version "1.9.0-b2">
    <!ENTITY app_support "support@epitre.co">
]>
<resources>

    <string name="app_name">&app_name;</string>
    <string name="app_version">&app_version;</string>
    <string name="app_support">&app_support;</string>

    <!-- Drawer actions -->
    <string name="drawer_open">Ouvrir la liste des offices</string>
    <string name="drawer_close">Fermer la liste des offices</string>

    <!-- Drawer items -->
    <string name="nav_mass">Messe</string>
    <string name="nav_informations">Informations</string>
    <string name="nav_title_offices">Liturgies des heures</string>
    <string name="nav_lectures">Lectures</string>
    <string name="nav_laudes">Laudes</string>
    <string name="nav_tierce">Tierce</string>
    <string name="nav_sexte">Sexte</string>
    <string name="nav_none">None</string>
    <string name="nav_vepres">Vêpres</string>
    <string name="nav_complies">Complies</string>
    <string name="nav_bible">Bible</string>

    <!-- Toolbar buttons -->
    <string name="action_calendar">Date</string>
    <string name="action_share">Partager</string>
    <string name="action_sync_settings">Paramètres</string>
    <string name="action_sync_do">Synchroniser</string>
    <string name="action_refresh">Rafraîchir</string>
    <string name="action_about">À propos</string>
    
    <!-- Dialogs -->
    <string name="dialog_about_title">À propos</string>
    <string name="dialog_about_content">
        L\'application \"&app_name;\" version &app_version; est développée bénévolement par
        "Epitre &amp; co" avec le soutien d\'AELF (www.aelf.org), l\'Association Épiscopale pour la
        Liturgie Francophone.

        \n\nTextes liturgiques, logo et nom reproduits avec l\'aimable autorisation d\'AELF. Tous droits
        réservés. AELF n\'est pas responsable de cette application.

        \n\nPour plus d\'informations sur cette application, contactez &app_support;.
    </string>
	
	<!-- Buttons -->
    <string name="button_ok">Valider</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_today">Auj.</string>

    <!-- Preferences -->
    <string name="mailto_dev">mailto:&app_support;?subject=Application &app_name; (version: &app_version;)</string>


    <!-- Bible -->
    <string name="action_settings">Réglages</string>
</resources>
